packages/envision/src/scss/collapse.scss
.env-collapse {
   html:not(.sv-no-js) &:not(.env-collapse--show) {
      display: none;
   }

   word-wrap: break-word;
   overflow-wrap: anywhere;
   word-break: normal;

   > :first-child {
      padding-top: css-var('spacing-xx-small');
   }
}

.env-collapse-header {
   width: 100%;
   padding: css-var('spacing-x-small');
   cursor: pointer;
   box-sizing: border-box;
   border: {
      style: css-var('collapse-border-style');
      width: css-var('collapse-border-width');
      color: css-var('collapse-border-color');
   }
   background-color: css-var('collapse-background-color');
   word-wrap: break-word;
   overflow-wrap: anywhere;
   word-break: normal;
   color: inherit;
   text-decoration: none;

   @include focus-visible;

   &:hover,
   &.env-collapse--expanded {
      background-color: css-var('collapse-expanded-background-color');
      border-color: css-var('collapse-expanded-border-color');
   }
}

[data-env-collapse] {
   &:not(.env-collapse--expanded) {
      .env-collapse-header--icons {
         &::before {
            transform: rotate(-90deg);
         }
      }
   }
}

.env-collapse-header--icons {
   margin-left: $collapse-icon-width;
   min-height: $collapse-heading-min-height;
   position: relative;

   &::before,
   &::after {
      content: '';
      top: $collapse-icon-top;
      right: $collapse-icon-right;
      width: css-var('collapse-icon-width');
      height: css-var('collapse-icon-height');
      transition: transform css-var('collapse-toggle-duration') ease-out;
      position: absolute;
      background-color: css-var('collapse-icon-color');
   }
}

